# I-Protocol-Project

./: Cargo.toml  FINALIZED LAMEQX.txt  FINALIZED MARS.txt  FINALIZED PADA.txt  FINALIZED TOKENOMICS.txt  FINALIZED VDF.txt  README.md  SuperResults.txt  Superscript.txt  angular.json  clippy.config.toml  package-lock.json  package.json
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: 3rdpartylicenses.txt  prerendered-routes.json
docs/browser/: 404.html  chunk-DZCWYDFS.js  chunk-TZENQZDX.js  index.csr.html  main-DEABJX3X.js  styles-GMIPBZNJ.css
docs/browser/about/: index.html
docs/browser/admin/dashboard/: index.html
docs/browser/characters/: index.html
docs/browser/download/: index.html
docs/browser/register/: index.html
docs/server/: chunk-6R55JPXK.mjs  chunk-FDWWK65F.mjs  chunk-FOS4Y5SU.mjs  chunk-WA72NCKG.mjs  chunk-ZSLMUCEU.mjs  index.server.html  main.server.mjs  render-utils.server.mjs  server.mjs
engines/lameqx/: Cargo.toml
engines/lameqx/src/: lib.rs  tests.rs
engines/mars/: Cargo.toml
engines/mars/src/: lib.rs  tests.rs
engines/pada/: Cargo.toml
engines/pada/src/: lib.rs  tests.rs
engines/tokenomics/: Cargo.toml
engines/tokenomics/src/: lib.rs  tests.rs
engines/vdf/: Cargo.toml
engines/vdf/src/: lib.rs  mars_integration.rs  tests.rs
examples/: Cargo.toml  complete_protocol.rs
examples/src/: lib.rs  main.rs
integration/: Cargo.toml
integration/src/: interface.rs  lib.rs
public/i18n/: en.json  ka.json
src/: main.ts  styles.css
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/about/: about.component.css  about.component.html  about.component.ts
src/app/admin/adminServices/: admin-routing.module.ts  admin.module.ts  admin.service.ts  auth.guard.ts
src/app/admin/admindashboard/: admindashboard.component.css  admindashboard.component.html  admindashboard.component.spec.ts  admindashboard.component.ts
src/app/admin/adminlogin/: adminlogin.component.css  adminlogin.component.html  adminlogin.component.ts
src/app/cart/: cart.component.css  cart.component.html  cart.component.ts
src/app/characters/: characters.component.css  characters.component.html  characters.component.ts
src/app/characters-card/: characters-card.component.css  characters-card.component.html  characters-card.component.ts
src/app/chat-icon/: chat-icon.component.css  chat-icon.component.html  chat-icon.component.ts
src/app/chat-window/: chat-window.component.css  chat-window.component.html  chat-window.component.ts
src/app/download/: download.component.css  download.component.html  download.component.ts
src/app/footer/: footer.component.css  footer.component.html  footer.component.ts
src/app/header/: header.component.css  header.component.html  header.component.ts
src/app/home/: home.component.css  home.component.html  home.component.ts
src/app/login/: login.component.css  login.component.html  login.component.ts
src/app/not-found/: not-found.component.css  not-found.component.html
src/app/packs/: packs.component.css  packs.component.html  packs.component.ts
src/app/payment/: payment.component.css  payment.component.html  payment.component.ts
src/app/register/: register.component.css  register.component.html  register.component.ts
src/app/services/: auth.service.ts  cart.service.ts  characters.ts  data.json  get-data.service.ts  pack.ts
src/app/theme-toggle/: theme-toggle.component.css  theme-toggle.component.html  theme-toggle.component.ts
src/assets/i18n/: en.json  ka.json
