[workspace]
members = [
    "crypto",
    "engines/vdf",
    "engines/lameqx", 
    "engines/pada",
    "engines/mars",
    "engines/tokenomics",
    "integration",
    "examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["I Protocol V5 Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iprotocol/v5"
description = "I Protocol V5 - A deterministic, forkless blockchain protocol with five coherent engines"

[workspace.dependencies]

# Cryptography
sha3 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand_core = "0.6"
rand = "0.8"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Big integers and math
primitive-types = { version = "0.12", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rug = "1.24"

# Collections and utilities
indexmap = "2.0"
once_cell = "1.19"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"

# VDF specific dependencies
classgroup = "0.7"
rsa = "0.9"

# Async and concurrency (for integration layer)
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Testing
proptest = "1.0"
criterion = "0.5"

# Logging
log = "0.4"
env_logger = "0.10"



# Profile optimizations for cryptographic operations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false