[package]
name = "iprotocol-vdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Engine 2: Verifiable Delay Function for I Protocol V5"
readme = "../../README.md"
keywords = ["vdf", "blockchain", "consensus", "delay-function", "cryptography"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Shared cryptographic foundations
iprotocol-crypto = { path = "../../crypto" }
# Core cryptography
sha3 = "0.10"

# RSA VDF dependencies
rsa = { version = "0.9", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }

# Class Group VDF dependencies
classgroup = { version = "0.1.0", optional = true }
vdf = { version = "0.1.0", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[features]
default = ["mock-backend"]
std = []
rsa-backend = ["rsa", "num-bigint", "num-traits", "rand", "serde"]
class-group-backend = ["classgroup", "vdf", "serde"]
mock-backend = []
all-backends = ["rsa-backend", "class-group-backend", "mock-backend"]